[package]
name = "funge-it-together"
version = "0.1.0"
edition = "2021"
authors = ["Bryan McClain <bamcclain10@gmail.com>"]
description = "Solve programming puzzles using an esoteric \"funge\" language"
readme = "README.md"
license-file = "LICENSE"
keywords = ["funge", "programming", "puzzles", "esoteric"]
categories = ["command-line-interface", "games"]

[dependencies]
crossterm = "0.26.1"
rand = "0.8.5"
rlua = "0.19.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
